# eugene

./: .env.example  .gitignore  README.md  eugene.toml  mcp_registry.json  patch.py  personality.toml  pyproject.toml
.agents/skills/eugene-applets/: SKILL.md
.agents/skills/eugene-applets/references/: applet-reference.md
.agents/skills/pdfplumber/: SKILL.md
.codex/skills/eugene-applets/: SKILL.md
.codex/skills/eugene-channel-builder/: SKILL.md
.codex/skills/vite-react-best-practices/: SKILL.md
applets/calendar/: applet.py  applet.toml
applets/clock/: applet.py  applet.toml
applets/email_manager/: applet.py  applet.toml
applets/filesystem/: applet.py  applet.toml
applets/memory/: applet.py  applet.toml
applets/pdf_reader/: applet.py  applet.toml
applets/personality/: applet.py  applet.toml  personality.toml
applets/python_repl/: applet.py  applet.toml  runner.py
applets/scheduler/: applet.py  applet.toml
applets/schoology/: applet.py  applet.toml
applets/shell_commander/: applet.py  applet.toml
applets/system_monitor/: applet.py  applet.toml
applets/user_prompt/: applet.py  applet.toml
applets/weather/: applet.py  applet.toml
applets/web_browser/: applet.py  applet.toml
channels/: discord.py  telegram.py  web.py
eugene_data/: eugene.db
eugene_data/chroma/: chroma.sqlite3
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/lib/: api.ts
src/eugene/: __main__.py  api.py  config.py  core.py  logging_utils.py  main.py  models.py  services.py  termagotchi_client.py
src/eugene.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
static/: index.html
static/assets/: angular-html-BE77TXmN.js  angular-html-BUejwKSz.js  angular-html-D-GBbxb4.js  angular-ts-BOHA52kz.js  angular-ts-DirHGV9y.js  angular-ts-kygcDOzP.js  apl-C_Il_tgb.js  apl-DCyKnpua.js  apl-mBC1Std0.js  astro-DJghvx_7.js  astro-DjvH-5IU.js  astro-Du3VPI2q.js  blade-BMGqbdFt.js  blade-DEUX8wdY.js  blade-lnZBnion.js  c-BTCBWeGg.js  c-BkQqWTWx.js  c-w1NRwGtD.js  cobol-C6OlF1NJ.js  cobol-DwWr7S_u.js  cobol-pO0IxlRC.js  coffee-BcoM0ZWG.js  coffee-BxT3h6O8.js  coffee-Dzp0v_55.js  cpp-BDEvfs3-.js  cpp-DFfY2cG5.js  cpp-DJV9eSxi.js  crystal-5sRxPB9w.js  crystal-CTnM-eUj.js  crystal-DPQCGwyR.js  css-BdgiSKEw.js  css-CCszhNpe.js  css-awEvQ24k.js  edge-CtL-IONm.js  edge-D-RAkz_E.js  edge-DpdxU7VP.js  elixir-8jVnx_FR.js  elixir-DRR1koF2.js  elixir-DoVPS3X7.js  elm-Bb7Xc39r.js  (+184 more)
(+9 files in other folders)
